# bsky-cli

./: .gitignore  README.md  pyproject.toml
bsky_cli/: __init__.py  announce.py  appreciate.py  auth.py  bookmarks.py  cli.py  config.py  context_cmd.py  delete.py  discover.py  dm.py  dm_cmd.py  dms_cmd.py  engage.py  follow.py  followup_notifications.py  http.py  interlocutors.py  like.py  lists.py  notify.py  notify_actions.py  notify_scored.py  notify_scoring.py  organic.py  people.py  post.py  profile.py  public_truth.py  ratelimit.py  reply.py  repost.py  runtime_guard.py  search.py  search_history_cmd.py  starterpack.py  threads.py
docs/: 2026-02-11_PLAN-to1.7.0.md  CLI_REFERENCE.md  PLAN-context-v2-prs.md  PLAN.md  RFC-0001-context-memory-sqlite.md  RFC-0002-threads-mod-state-sqlite.md  SPEC-2026-02-12-pattern-generalization-v1.8.0.md  SPEC-2026-02-12-v2.0.0-aur-quality-roadmap.md  USAGE_GUIDE.md  sweep-2026-02-11.md
skill/: SKILL.md
tests/: __init__.py  conftest.py  test_appreciate_llm_json.py  test_appreciate_profile.py  test_auth.py  test_bookmarks.py  test_context_cmd.py  test_context_cmd_focus_priority.py  test_context_dm_db_partial_fallback.py  test_context_dm_db_partial_fallback_offline.py  test_context_dm_match_did.py  test_discover.py  test_dm_check_new.py  test_dm_cmd_normalize.py  test_dm_facets.py  test_dm_poll_cursor_advances_on_outgoing.py  test_dm_poll_read_messages.py  test_dms.py  test_engage.py  test_followup_notifications.py  test_import_interlocutors_preserve_display_name.py  test_interlocutors.py  test_like.py  test_lists.py  test_post.py  (+37 more)
(+65 files in other folders)
