[project]
name = "bsky-cli"
version = "1.7.1"
description = "Unified BlueSky CLI for Echo"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
    "pillow>=12.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
bsky = "bsky_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["bsky_cli"]
omit = ["tests/*"]
